--- a/sar20-afbr-s50-array-hub-firmware.ioc
+++ b/sar20-afbr-s50-array-hub-firmware.ioc
@@ -4,16 +4,17 @@ PA6.GPIOParameters=GPIO_Speed
 SH.GPXTI1.0=GPIO_EXTI1
 ProjectManager.MainLocation=Core/Src
 RCC.I2SFreq_Value=160000000
-PA6.Mode=RX_Only_Simplex_Unidirect_Master
+PA6.Mode=Full_Duplex_Master
 RCC.PLLQoutputFreq_Value=160000000
 RCC.USART1Freq_Value=160000000
 ProjectManager.ProjectFileName=sar20-afbr-s50-array-hub-firmware.ioc
 RCC.SAI1Freq_Value=160000000
 RCC.CortexFreq_Value=160000000
+PA7.Mode=Full_Duplex_Master
 PB9.GPIO_Label=LED1
 ProjectManager.KeepUserCode=true
-Mcu.PinsNb=13
 Mcu.UserName=STM32G491CEUx
+Mcu.PinsNb=14
 SPI1.VirtualType=VM_MASTER
 ProjectManager.NoMain=false
 PC11.Locked=true
@@ -54,19 +55,19 @@ PC15-OSC32_OUT.Locked=true
 Mcu.UserConstants=
 ProjectManager.TargetToolchain=STM32CubeIDE
 Mcu.ThirdPartyNb=0
-SPI1.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI1.Direction=SPI_DIRECTION_2LINES
 RCC.HCLKFreq_Value=160000000
 Mcu.IPNb=5
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=160000000
 PB9.Locked=true
 SPI1.CalculateBaudRate=10.0 MBits/s
-Mcu.Pin6=PA14
-Mcu.Pin7=PC10
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
 ProjectManager.RegisterCallBack=
-Mcu.Pin8=PC11
+Mcu.Pin8=PC10
 RCC.USBFreq_Value=48000000
-Mcu.Pin9=PB4
+Mcu.Pin9=PC11
 RCC.LSE_VALUE=32768
 PC15-OSC32_OUT.Signal=GPIO_Output
 PF1-OSC_OUT.GPIOParameters=GPIO_Label
@@ -78,7 +79,7 @@ Mcu.Pin2=PF1-OSC_OUT
 Mcu.Pin3=PA5
 RCC.USART3Freq_Value=160000000
 Mcu.Pin4=PA6
-Mcu.Pin5=PA13
+Mcu.Pin5=PA7
 PA5.Signal=SPI1_SCK
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
@@ -90,6 +91,7 @@ RCC.VCOOutputFreq_Value=320000000
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.ADC12Freq_Value=160000000
 ProjectManager.LastFirmware=true
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 ProjectManager.FirmwarePackage=STM32Cube FW_G4 V1.4.0
 RCC.ADC345Freq_Value=160000000
 MxDb.Version=DB.6.0.21
@@ -142,16 +144,17 @@ PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA5.GPIOParameters=GPIO_Speed
+Mcu.Pin13=VP_SYS_VS_DBSignals
 PC11.Mode=Asynchronous
 ProjectManager.ComputerToolchain=false
 RCC.HSI_VALUE=16000000
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_SYS_VS_DBSignals
+Mcu.Pin11=PB9
+Mcu.Pin12=VP_SYS_VS_Systick
 RCC.PLLN=20
 RCC.PLLPoutputFreq_Value=160000000
-Mcu.Pin10=PB9
+Mcu.Pin10=PB4
 RCC.APB1TimFreq_Value=160000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 RCC.PWRFreq_Value=160000000
@@ -164,6 +167,7 @@ SH.GPXTI1.ConfNb=1
 RCC.I2C2Freq_Value=160000000
 RCC.APB1Freq_Value=160000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+PA7.GPIOParameters=GPIO_Speed
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32G491CEUx
 PF1-OSC_OUT.Signal=GPXTI1
@@ -171,5 +175,6 @@ ProjectManager.LibraryCopy=1
 RCC.HSI48_VALUE=48000000
 PB4.Signal=GPIO_Output
 RCC.HRTIM1Freq_Value=160000000
-PA5.Mode=RX_Only_Simplex_Unidirect_Master
+PA5.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 isbadioc=false
