--- a/sar20-afbr-s50-array-hub-firmware.ioc
+++ b/sar20-afbr-s50-array-hub-firmware.ioc
@@ -1,180 +1,194 @@
 #MicroXplorer Configuration settings - do not modify
+File.Version=6
+GPIO.groupedBy=Group By Peripherals
+KeepUserPlacement=false
 Mcu.Family=STM32G4
-PA6.GPIOParameters=GPIO_Speed
-SH.GPXTI1.0=GPIO_EXTI1
-ProjectManager.MainLocation=Core/Src
-RCC.I2SFreq_Value=160000000
-PA6.Mode=Full_Duplex_Master
-RCC.PLLQoutputFreq_Value=160000000
-RCC.USART1Freq_Value=160000000
-ProjectManager.ProjectFileName=sar20-afbr-s50-array-hub-firmware.ioc
-RCC.SAI1Freq_Value=160000000
-RCC.CortexFreq_Value=160000000
-PA7.Mode=Full_Duplex_Master
-PB9.GPIO_Label=LED1
-ProjectManager.KeepUserCode=true
-Mcu.UserName=STM32G491CEUx
-Mcu.PinsNb=14
-SPI1.VirtualType=VM_MASTER
-ProjectManager.NoMain=false
-PC11.Locked=true
-SPI1.IPParameters=VirtualType,Mode,Direction,DataSize,BaudRatePrescaler,CalculateBaudRate,NSSPMode
-PC10.Locked=true
-PC10.Signal=USART3_TX
-PC11.Signal=USART3_RX
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
-PC10.Mode=Asynchronous
-RCC.EXTERNAL_CLOCK_VALUE=12288000
-ProjectManager.DefaultFWLocation=true
-RCC.USART2Freq_Value=160000000
-ProjectManager.DeletePrevious=true
-PF1-OSC_OUT.Locked=true
-PF0-OSC_IN.PinState=GPIO_PIN_SET
-RCC.QSPIFreq_Value=160000000
-PC15-OSC32_OUT.GPIO_Label=LED2
-PinOutPanel.RotationAngle=0
-RCC.FamilyName=M
-RCC.MCO1PinFreq_Value=16000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-ProjectManager.StackSize=0x400
-PB9.GPIOParameters=GPIO_Label
-USART3.VirtualMode-Asynchronous=VM_ASYNC
-RCC.I2C3Freq_Value=160000000
-RCC.LPTIM1Freq_Value=160000000
-PA13.Signal=SYS_JTMS-SWDIO
-Mcu.IP4=USART3
-RCC.FCLKCortexFreq_Value=160000000
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SYS
-PB4.GPIOParameters=GPIO_Label
-Mcu.IP0=NVIC
-NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-Mcu.IP1=RCC
-PC15-OSC32_OUT.Locked=true
-Mcu.UserConstants=
-ProjectManager.TargetToolchain=STM32CubeIDE
-Mcu.ThirdPartyNb=0
-SPI1.Direction=SPI_DIRECTION_2LINES
-RCC.HCLKFreq_Value=160000000
+Mcu.IP4=USART3
 Mcu.IPNb=5
-ProjectManager.PreviousToolchain=
-RCC.APB2TimFreq_Value=160000000
-PB9.Locked=true
-SPI1.CalculateBaudRate=10.0 MBits/s
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-ProjectManager.RegisterCallBack=
-Mcu.Pin8=PC10
-RCC.USBFreq_Value=48000000
-Mcu.Pin9=PC11
-RCC.LSE_VALUE=32768
-PC15-OSC32_OUT.Signal=GPIO_Output
-PF1-OSC_OUT.GPIOParameters=GPIO_Label
-RCC.AHBFreq_Value=160000000
+Mcu.Name=STM32G491C(C-E)Ux
+Mcu.Package=UFQFPN48
 Mcu.Pin0=PC15-OSC32_OUT
 Mcu.Pin1=PF0-OSC_IN
-GPIO.groupedBy=Group By Peripherals
+Mcu.Pin10=PC10
+Mcu.Pin11=PC11
+Mcu.Pin12=PB4
+Mcu.Pin13=PB9
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_SYS_VS_DBSignals
 Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin3=PA5
-RCC.USART3Freq_Value=160000000
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-PA5.Signal=SPI1_SCK
-ProjectManager.ProjectBuild=false
-RCC.HSE_VALUE=8000000
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PF0-OSC_IN.GPIO_Label=CSn1
+Mcu.Pin3=PA0
+Mcu.Pin4=PA1
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=16
+Mcu.ThirdPartyNb=0
+Mcu.UserConstants=
+Mcu.UserName=STM32G491CEUx
+MxCube.Version=6.3.0
+MxDb.Version=DB.6.0.30
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-board=custom
-RCC.VCOOutputFreq_Value=320000000
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-RCC.ADC12Freq_Value=160000000
-ProjectManager.LastFirmware=true
-PA7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-ProjectManager.FirmwarePackage=STM32Cube FW_G4 V1.4.0
-RCC.ADC345Freq_Value=160000000
-MxDb.Version=DB.6.0.21
-RCC.APB2Freq_Value=160000000
-ProjectManager.BackupPrevious=false
-MxCube.Version=6.2.1
-PB4.GPIO_Label=TRIG
-RCC.VCOInputFreq_Value=16000000
-RCC.I2C1Freq_Value=160000000
-SPI1.Mode=SPI_MODE_MASTER
-VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
-PA14.Mode=Serial_Wire
-PF0-OSC_IN.Locked=true
-RCC.FDCANFreq_Value=160000000
-RCC.RNGFreq_Value=48000000
-SPI1.DataSize=SPI_DATASIZE_16BIT
-File.Version=6
-PF1-OSC_OUT.GPIO_Label=DONE1
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-RCC.PLLRCLKFreq_Value=160000000
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA13.Mode=Serial_Wire
-ProjectManager.FreePins=false
-RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-ProjectManager.AskForMigrate=true
-Mcu.Name=STM32G491C(C-E)Ux
-ProjectManager.HalAssertFull=false
-SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
-RCC.CRSFreq_Value=48000000
-ProjectManager.ProjectName=sar20-afbr-s50-array-hub-firmware
-ProjectManager.UnderRoot=true
-ProjectManager.CoupleFile=false
-PB4.Locked=true
-RCC.SYSCLKFreq_VALUE=160000000
-Mcu.Package=UFQFPN48
-PB9.Signal=GPIO_Output
-PA6.Signal=SPI1_MISO
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-KeepUserPlacement=false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-ProjectManager.CompilerOptimize=6
-ProjectManager.ToolChainLocation=
-RCC.LSI_VALUE=32000
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-RCC.LSCOPinFreq_Value=32000
-USART3.IPParameters=VirtualMode-Asynchronous
-PA14.Signal=SYS_JTCK-SWCLK
-ProjectManager.HeapSize=0x200
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA5.GPIOParameters=GPIO_Speed
-Mcu.Pin13=VP_SYS_VS_DBSignals
-PC11.Mode=Asynchronous
-ProjectManager.ComputerToolchain=false
-RCC.HSI_VALUE=16000000
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PB9
-Mcu.Pin12=VP_SYS_VS_Systick
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=DONE2
+PA0.Locked=true
+PA0.Signal=GPXTI0
+PA1.GPIOParameters=PinState,GPIO_Label
+PA1.GPIO_Label=CSn2
+PA1.Locked=true
+PA1.PinState=GPIO_PIN_SET
+PA1.Signal=GPIO_Output
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
+PA5.GPIOParameters=GPIO_Speed
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Speed
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Speed
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=TRIG
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=LED1
+PB9.Locked=true
+PB9.Signal=GPIO_Output
+PC10.Locked=true
+PC10.Mode=Asynchronous
+PC10.Signal=USART3_TX
+PC11.Locked=true
+PC11.Mode=Asynchronous
+PC11.Signal=USART3_RX
+PC15-OSC32_OUT.GPIOParameters=GPIO_Label
+PC15-OSC32_OUT.GPIO_Label=LED2
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Output
+PF0-OSC_IN.GPIOParameters=PinState,GPIO_Label
+PF0-OSC_IN.GPIO_Label=CSn1
+PF0-OSC_IN.Locked=true
+PF0-OSC_IN.PinState=GPIO_PIN_SET
+PF0-OSC_IN.Signal=GPIO_Output
+PF1-OSC_OUT.GPIOParameters=GPIO_Label
+PF1-OSC_OUT.GPIO_Label=DONE1
+PF1-OSC_OUT.Locked=true
+PF1-OSC_OUT.Signal=GPXTI1
+PinOutPanel.RotationAngle=0
+ProjectManager.AskForMigrate=true
+ProjectManager.BackupPrevious=false
+ProjectManager.CompilerOptimize=6
+ProjectManager.ComputerToolchain=false
+ProjectManager.CoupleFile=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
+ProjectManager.DeletePrevious=true
+ProjectManager.DeviceId=STM32G491CEUx
+ProjectManager.FirmwarePackage=STM32Cube FW_G4 V1.4.0
+ProjectManager.FreePins=false
+ProjectManager.HalAssertFull=false
+ProjectManager.HeapSize=0x200
+ProjectManager.KeepUserCode=true
+ProjectManager.LastFirmware=true
+ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Core/Src
+ProjectManager.NoMain=false
+ProjectManager.PreviousToolchain=
+ProjectManager.ProjectBuild=false
+ProjectManager.ProjectFileName=sar20-afbr-s50-array-hub-firmware.ioc
+ProjectManager.ProjectName=sar20-afbr-s50-array-hub-firmware
+ProjectManager.RegisterCallBack=
+ProjectManager.StackSize=0x400
+ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.ToolChainLocation=
+ProjectManager.UnderRoot=true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
+RCC.ADC12Freq_Value=160000000
+RCC.ADC345Freq_Value=160000000
+RCC.AHBFreq_Value=160000000
+RCC.APB1Freq_Value=160000000
+RCC.APB1TimFreq_Value=160000000
+RCC.APB2Freq_Value=160000000
+RCC.APB2TimFreq_Value=160000000
+RCC.CRSFreq_Value=48000000
+RCC.CortexFreq_Value=160000000
+RCC.EXTERNAL_CLOCK_VALUE=12288000
+RCC.FCLKCortexFreq_Value=160000000
+RCC.FDCANFreq_Value=160000000
+RCC.FamilyName=M
+RCC.HCLKFreq_Value=160000000
+RCC.HRTIM1Freq_Value=160000000
+RCC.HSE_VALUE=8000000
+RCC.HSI48_VALUE=48000000
+RCC.HSI_VALUE=16000000
+RCC.I2C1Freq_Value=160000000
+RCC.I2C2Freq_Value=160000000
+RCC.I2C3Freq_Value=160000000
+RCC.I2SFreq_Value=160000000
+RCC.IPParameters=ADC12Freq_Value,ADC345Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,QSPIFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.LPTIM1Freq_Value=160000000
+RCC.LPUART1Freq_Value=160000000
+RCC.LSCOPinFreq_Value=32000
+RCC.LSE_VALUE=32768
+RCC.LSI_VALUE=32000
+RCC.MCO1PinFreq_Value=16000000
 RCC.PLLN=20
 RCC.PLLPoutputFreq_Value=160000000
-Mcu.Pin10=PB4
-RCC.APB1TimFreq_Value=160000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+RCC.PLLQoutputFreq_Value=160000000
+RCC.PLLRCLKFreq_Value=160000000
 RCC.PWRFreq_Value=160000000
-RCC.LPUART1Freq_Value=160000000
-PC15-OSC32_OUT.GPIOParameters=GPIO_Label
-PF0-OSC_IN.Signal=GPIO_Output
-PA6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PF0-OSC_IN.GPIOParameters=PinState,GPIO_Label
+RCC.QSPIFreq_Value=160000000
+RCC.RNGFreq_Value=48000000
+RCC.SAI1Freq_Value=160000000
+RCC.SYSCLKFreq_VALUE=160000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.USART1Freq_Value=160000000
+RCC.USART2Freq_Value=160000000
+RCC.USART3Freq_Value=160000000
+RCC.USBFreq_Value=48000000
+RCC.VCOInputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=320000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-RCC.I2C2Freq_Value=160000000
-RCC.APB1Freq_Value=160000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-PA7.GPIOParameters=GPIO_Speed
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DeviceId=STM32G491CEUx
-PF1-OSC_OUT.Signal=GPXTI1
-ProjectManager.LibraryCopy=1
-RCC.HSI48_VALUE=48000000
-PB4.Signal=GPIO_Output
-RCC.HRTIM1Freq_Value=160000000
-PA5.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
+SPI1.CalculateBaudRate=10.0 MBits/s
+SPI1.DataSize=SPI_DATASIZE_16BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,DataSize,BaudRatePrescaler,CalculateBaudRate,NSSPMode
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
+SPI1.VirtualType=VM_MASTER
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
+VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
+VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+board=custom
 isbadioc=false
