--- a/sar20-afbr-s50-array-hub-firmware.ioc
+++ b/sar20-afbr-s50-array-hub-firmware.ioc
@@ -11,23 +11,43 @@ Mcu.IP4=USART3
 Mcu.IPNb=5
 Mcu.Name=STM32G491C(C-E)Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PC15-OSC32_OUT
-Mcu.Pin1=PF0-OSC_IN
-Mcu.Pin10=PC10
-Mcu.Pin11=PC11
-Mcu.Pin12=PB4
-Mcu.Pin13=PB9
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_SYS_VS_DBSignals
-Mcu.Pin2=PF1-OSC_OUT
-Mcu.Pin3=PA0
-Mcu.Pin4=PA1
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=16
+Mcu.Pin0=PC13
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PB0
+Mcu.Pin13=PB1
+Mcu.Pin14=PB2
+Mcu.Pin15=PB10
+Mcu.Pin16=PB11
+Mcu.Pin17=PB12
+Mcu.Pin18=PC6
+Mcu.Pin19=PA8
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PA15
+Mcu.Pin27=PC10
+Mcu.Pin28=PC11
+Mcu.Pin29=PB4
+Mcu.Pin3=PF0-OSC_IN
+Mcu.Pin30=PB6
+Mcu.Pin31=PB7
+Mcu.Pin32=PB8-BOOT0
+Mcu.Pin33=PB9
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_SYS_VS_DBSignals
+Mcu.Pin4=PF1-OSC_OUT
+Mcu.Pin5=PA0
+Mcu.Pin6=PA1
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G491CEUx
@@ -36,7 +56,11 @@ MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -55,26 +79,122 @@ PA1.GPIO_Label=CSn2
 PA1.Locked=true
 PA1.PinState=GPIO_PIN_SET
 PA1.Signal=GPIO_Output
+PA10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA10.GPIO_Label=CSn8
+PA10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA10.GPIO_PuPd=GPIO_NOPULL
+PA10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA10.Locked=true
+PA10.PinState=GPIO_PIN_SET
+PA10.Signal=GPIO_Output
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=DONE9
+PA11.Locked=true
+PA11.Signal=GPXTI11
+PA12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA12.GPIO_Label=CSn9
+PA12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA12.GPIO_PuPd=GPIO_NOPULL
+PA12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA12.Locked=true
+PA12.PinState=GPIO_PIN_SET
+PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=DONE10
+PA15.Locked=true
+PA15.Signal=GPXTI15
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=DONE3
+PA4.Locked=true
+PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Speed
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Speed
-PA6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.GPIOParameters=GPIO_Speed
-PA7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA8.GPIO_Label=CSn7
+PA8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA8.GPIO_PuPd=GPIO_NOPULL
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=DONE8
+PA9.Locked=true
+PA9.Signal=GPXTI9
+PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB0.GPIO_Label=CSn4
+PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB0.GPIO_PuPd=GPIO_NOPULL
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB0.Locked=true
+PB0.PinState=GPIO_PIN_SET
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB1.GPIO_Label=CSn5
+PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB1.GPIO_PuPd=GPIO_NOPULL
+PB1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB1.Locked=true
+PB1.PinState=GPIO_PIN_SET
+PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=DONE5
+PB10.Locked=true
+PB10.Signal=GPXTI10
+PB11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB11.GPIO_Label=CSn6
+PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB11.GPIO_PuPd=GPIO_NOPULL
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB11.Locked=true
+PB11.PinState=GPIO_PIN_SET
+PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=DONE6
+PB12.Locked=true
+PB12.Signal=GPXTI12
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=DONE4
+PB2.Locked=true
+PB2.Signal=GPXTI2
 PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=TRIG
 PB4.Locked=true
 PB4.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB6.GPIO_Label=CSn10
+PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB6.GPIO_PuPd=GPIO_NOPULL
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB6.Locked=true
+PB6.PinState=GPIO_PIN_SET
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB7.GPIO_Label=CSn11
+PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB7.GPIO_PuPd=GPIO_NOPULL
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PB7.Locked=true
+PB7.PinState=GPIO_PIN_SET
+PB7.Signal=GPIO_Output
+PB8-BOOT0.GPIOParameters=GPIO_Label
+PB8-BOOT0.GPIO_Label=DONE11
+PB8-BOOT0.Locked=true
+PB8-BOOT0.Signal=GPXTI8
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=LED1
 PB9.Locked=true
@@ -85,10 +205,34 @@ PC10.Signal=USART3_TX
 PC11.Locked=true
 PC11.Mode=Asynchronous
 PC11.Signal=USART3_RX
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=DONE12
+PC13.Locked=true
+PC13.Signal=GPXTI13
+PC14-OSC32_IN.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC14-OSC32_IN.GPIO_Label=CSn12
+PC14-OSC32_IN.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC14-OSC32_IN.GPIO_PuPd=GPIO_NOPULL
+PC14-OSC32_IN.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.PinState=GPIO_PIN_SET
+PC14-OSC32_IN.Signal=GPIO_Output
 PC15-OSC32_OUT.GPIOParameters=GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=LED2
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=GPIO_Output
+PC4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC4.GPIO_Label=CSn3
+PC4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC4.GPIO_PuPd=GPIO_NOPULL
+PC4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC4.Locked=true
+PC4.PinState=GPIO_PIN_SET
+PC4.Signal=GPIO_Output
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=DONE7
+PC6.Locked=true
+PC6.Signal=GPXTI6
 PF0-OSC_IN.GPIOParameters=PinState,GPIO_Label
 PF0-OSC_IN.GPIO_Label=CSn1
 PF0-OSC_IN.Locked=true
@@ -176,8 +320,28 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI1.CalculateBaudRate=10.0 MBits/s
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CalculateBaudRate=5.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_16BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,DataSize,BaudRatePrescaler,CalculateBaudRate,NSSPMode
