Change trigger to use 100 Hz PWM

--- a/sar20-afbr-s50-array-hub-firmware.ioc
+++ b/sar20-afbr-s50-array-hub-firmware.ioc
@@ -7,8 +7,9 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SYS
-Mcu.IP4=USART3
-Mcu.IPNb=5
+Mcu.IP4=TIM16
+Mcu.IP5=USART3
+Mcu.IPNb=6
 Mcu.Name=STM32G491C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13
@@ -41,13 +42,14 @@ Mcu.Pin32=PB8-BOOT0
 Mcu.Pin33=PB9
 Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin35=VP_SYS_VS_DBSignals
+Mcu.Pin36=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=36
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G491CEUx
@@ -171,10 +173,7 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=DONE4
 PB2.Locked=true
 PB2.Signal=GPXTI2
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=TRIG
-PB4.Locked=true
-PB4.Signal=GPIO_Output
+PB4.Signal=S_TIM16_CH1
 PB6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB6.GPIO_Label=CSn10
 PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -340,6 +339,8 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
+SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
+SH.S_TIM16_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI1.CalculateBaudRate=5.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_16BIT
@@ -348,11 +349,18 @@ SPI1.IPParameters=VirtualType,Mode,Direction,DataSize,BaudRatePrescaler,Calculat
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
+TIM16.Channel=TIM_CHANNEL_1
+TIM16.IPParameters=Channel,Prescaler,PeriodNoDither,PulseNoDither_1
+TIM16.PeriodNoDither=63999
+TIM16.Prescaler=24
+TIM16.PulseNoDither_1=640
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 board=custom
 isbadioc=false
