--- a/sar20-afbr-s50-array-hub-firmware.ioc
+++ b/sar20-afbr-s50-array-hub-firmware.ioc
@@ -1,61 +1,104 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=USART2_RX
+Dma.Request1=USART2_TX
+Dma.RequestsNb=2
+Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.0.EventEnable=DISABLE
+Dma.USART2_RX.0.Instance=DMA1_Channel1
+Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.0.Mode=DMA_NORMAL
+Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.0.RequestNumber=1
+Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART2_RX.0.SignalID=NONE
+Dma.USART2_RX.0.SyncEnable=DISABLE
+Dma.USART2_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART2_RX.0.SyncRequestNumber=1
+Dma.USART2_RX.0.SyncSignalID=NONE
+Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.1.EventEnable=DISABLE
+Dma.USART2_TX.1.Instance=DMA1_Channel2
+Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.1.Mode=DMA_NORMAL
+Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.1.RequestNumber=1
+Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART2_TX.1.SignalID=NONE
+Dma.USART2_TX.1.SyncEnable=DISABLE
+Dma.USART2_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART2_TX.1.SyncRequestNumber=1
+Dma.USART2_TX.1.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32G4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP4=TIM16
-Mcu.IP5=USART3
-Mcu.IPNb=6
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=TIM16
+Mcu.IP6=USART2
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32G491C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PB0
-Mcu.Pin13=PB1
-Mcu.Pin14=PB2
-Mcu.Pin15=PB10
-Mcu.Pin16=PB11
-Mcu.Pin17=PB12
-Mcu.Pin18=PC6
-Mcu.Pin19=PA8
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PB0
+Mcu.Pin15=PB1
+Mcu.Pin16=PB2
+Mcu.Pin17=PB10
+Mcu.Pin18=PB11
+Mcu.Pin19=PB12
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PA15
-Mcu.Pin27=PC10
-Mcu.Pin28=PC11
-Mcu.Pin29=PB4
+Mcu.Pin20=PC6
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PA15
+Mcu.Pin29=PC10
 Mcu.Pin3=PF0-OSC_IN
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=PB8-BOOT0
-Mcu.Pin33=PB9
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_SYS_VS_DBSignals
-Mcu.Pin36=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin30=PC11
+Mcu.Pin31=PB4
+Mcu.Pin32=PB6
+Mcu.Pin33=PB7
+Mcu.Pin34=PB8-BOOT0
+Mcu.Pin35=PB9
+Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin37=VP_SYS_VS_DBSignals
+Mcu.Pin38=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=37
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G491CEUx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -71,6 +114,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=DONE2
@@ -109,6 +153,10 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=DONE10
 PA15.Locked=true
 PA15.Signal=GPXTI15
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=DONE3
 PA4.Locked=true
@@ -269,7 +317,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM16_Init-TIM16-false-HAL-true,6-MX_DMA_Init-DMA-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADC12Freq_Value=160000000
 RCC.ADC345Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -354,6 +402,9 @@ TIM16.IPParameters=Channel,Prescaler,PeriodNoDither,PulseNoDither_1
 TIM16.PeriodNoDither=63999
 TIM16.Prescaler=24
 TIM16.PulseNoDither_1=640
+USART2.BaudRate=1000000
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
